로그아웃 완료

--- a/board/templates/board/index.html
+++ b/board/templates/board/index.html
@@ -60,7 +60,7 @@
                 <div id="auto_login">
                     <ul>
                         <li class="sign_up">
-                            <a href="{% url 'signup' %}">회원가입</a>
+                            <a href="signup/">회원가입</a>
                         </li>
                         <li class="sign_up">
                             <a href="">비밀번호 찾기</a>
