--- a/board/templates/board/signupform.html
+++ b/board/templates/board/signupform.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/commen.css">
     <link rel="stylesheet" href="/static/css/signupform.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/checker.js"></script>
+    <script type="text/javascript" src="/static/js/checker.js?ver=1"></script>
 </head>
 <body>
     <div id="wrap">
