--- a/board/templates/board/boardlist.html
+++ b/board/templates/board/boardlist.html
@@ -7,27 +7,25 @@
     <link rel="stylesheet" href="/static/css/commen.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/static/css/boardlist.css">
-    <script type="text/javascript" src="/static/js/boardlist.js?ver=2"></script>
-
+    <script type="text/javascript" src="/static/js/boardlist.js?ver=5"></script>
 </head>
 <body>
     <div id="wrap">
-
        <div class="board">
-            <span>~님 환영합니다.</span>
-            <span><a href="" class="logout" >로그아웃</a></span>
-            {% csrf_token %}
+           {% if user.is_authenticated %}
+            <span>{{ user.first_name }}님 환영합니다.</span>
+            <span><a href="../logout_action/" class="logout" >로그아웃</a></span>
+           {% endif %}
             <span><a href="">내 정보</a></span>
             <br>
             <div class="search">
-                <span>□ 총 ?건의 게시물</span>
-                <form action="" method="">
+                <span>□ 총 {{ data_num }}건의 게시물</span>
+                <form action="" method="GET">
                     <select name="type" id="" class="search_type">
                         <option value="title">제목</option>
                         <option value="contents">내용</option>
-                        <option value="writer">작성자</option>
                     </select>
-                    <input type="text" class="contents">
+                    <input type="text" class="contents" name="keyword">
                     <input type="button" value="검색" class="searching">
                 </form>
             </div>
@@ -36,72 +34,26 @@
                 <span class="board_title">제목</span>
                 <span class="board_date">작성일</span>
             </div>
+            {% for i in posts %}
             <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
+                <span>{{ i.id }}</span>
+                <span><a href="">{{ i.board_title }}</a></span>
+                <span>{{ i.board_date | date:'yy-m-d, H:i' }}</span>
             </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
-                        <div class="post">
-                <span>10</span>
-                <span><a href="">게시물</a></span>
-                <span>2111-11-11</span>
-            </div>
+            {% endfor %}
                 <div class="page_num">
-                    <a href="#" class="pre">&lt; 이전</a>
-                    <a href="#" class="numbers selected">1</a>
-                    <a href="#" class="numbers">2</a>
-                    <a href="#" class="numbers">3</a>
-                    <a href="#" class="numbers">4</a>
-                    <a href="#" class="numbers">5</a>
-                    <a href="#" class="numbers">6</a>
-                    <a href="#" class="numbers">7</a>
-                    <a href="#" class="numbers">8</a>
-                    <a href="#" class="numbers">9</a>
-                    <a href="#" class="numbers">10</a>
-                    <a href="#" class="next">다음 &gt;</a>
-                    
+                    {% if posts.has_previous %} <!--첫번째 페이지면-->
+                    <a href="?page={{ posts.previous_page_number }}" class="pre">&lt; 이전</a>
+                    {% endif %}
+                    {% for i in ranges %} <!--페이지 번호-->
+{#                        <a href="?page={{ i }}" class="numbers selected">{{ i }}</a>#}
+                        <a href="?page={{ i }}" class="numbers {% if i == posts.number %}selected{% endif %}">{{ i }}</a>
+                    {% endfor %}
+                {% if posts.has_next %}<!--마지막 페이지와 현재 페이지가 다르면-->
+                    <a href="?page={{ posts.next_page_number }}" class="next">다음 &gt;</a>
+                {% endif %}
                 </div>
-                <a href="#" class="write">작성</a>
+                <a href="board_edit" class="write">작성</a>
         </div>
     </div>
 </body>
