로그인, 로그아웃 완료 게시판 불러오기, 작성, 삭제 완료 게시물 수정, 검색 남음

--- a/board/templates/board/boardlist.html
+++ b/board/templates/board/boardlist.html
@@ -37,8 +37,8 @@
             {% for i in posts %}
             <div class="post">
                 <span>{{ i.id }}</span>
-                <span><a href="">{{ i.board_title }}</a></span>
-                <span>{{ i.board_date | date:'yy-m-d, H:i' }}</span>
+                <span><a href="{{ i.id }}">{{ i.board_title }}</a></span>
+                <span>{{ i.board_date | date:'yy-m-d' }}</span>
             </div>
             {% endfor %}
                 <div class="page_num">
