--- a/board/templates/board/board_edit.html
+++ b/board/templates/board/board_edit.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
      <script src="/static/js/jquery.MultiFile.js"></script>
-     <script src="/static/js/edit.js?ver=8"></script>
+     <script src="/static/js/edit.js?ver=9"></script>
 </head>
 <body>
     <div id="wrap"> <!-- 전체를 감싸는 부분 -->
@@ -25,7 +25,7 @@
                        </div>
                        <div class="content">
                            <label for="content">내용</label>
-                           <textarea name="content" id="" cols="30" rows="10" placeholder="내용을 입력하세요"></textarea>
+                           <textarea name="content" id="contents" cols="30" rows="10" placeholder="내용을 입력하세요"></textarea>
                        </div>
                        <div class="file">
                            <label for="file">파일 첨부</label>
@@ -36,7 +36,7 @@
                            </div>
                        </div>
                        <div class="btn">
-                            <input type="submit" value="작성하기">
+                            <input type="submit" value="작성하기" class="post_edit">
                            <input type="button" value="취소하기" class="cancel">
                        </div>
 
